
Changes:
  * The redux codelet should expose the STARPU_COMMUTE flag, since StarPU
    actually uses commutability.
  * Rename STARPU_COMM_STATS environment variable to STARPU_MPI_STATS
  * Function starpu_data_lookup has been removed, it is now up to the
    calling code to manage a ptr-to-handle reverse lookup table when
    needed.
  * Cluster is renamed in parallel worker

Small changes:
  * starpu_mpi_task_insert() returns -ENODEV if no worker is available
    on the node which is to execute the codelet (the other nodes do
    not return -ENODEV)
  * Add a synthetic energy efficiency testcase.
  * Make reduction methods want the commute flag.
  * Delete old MIC driver code
  * Rename
    - starpu_conf::sched_policy_init to starpu_conf::sched_policy_callback
    and
    - starpu_sched_ctx_get_sched_policy_init() to starpu_sched_ctx_get_sched_policy_callback()
    as the callback function may not only be used for init purposes
  * Change the default value for configure option --enable-maxcpus to
    auto. it allows StarPU to automatically use the number of CPUs
    on the build machine.
  * New option --worker for tool starpu_machine_display to only
    display workers of a specific type
  * Remove the unused and untested mpi_ms_funcs field.
  * The home_node parameter of the register_data_handle method is turned from
    unsigned to int, to explicit that it may be -1.
  * Value 0 for STARPU_MPI_NDETACHED_SEND and STARPU_MPI_NREADY_PROCESS will
    now disable their behaviour.
  * Distributed-memory reduction patterns are automatically wrapped-up if the user
    do not call starpu_mpi_redux_data()

StarPU 1.3.10
====================================================================

Small features:
  * Add starpu_worker_get_current_task_exp_end.

StarPU 1.3.9
====================================================================

Small changes:
  * Add missing interface macros for BCSR data interface

StarPU 1.3.8